--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "module": "index.esm.js",
   "types": "index.d.ts",
   "dependencies": {
-    "classnames": "^2.2.6"
+    "@react-hook/mouse-position": "^4.1.0",
+    "classnames": "^2.2.6",
+    "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "react": "^16.8.0",
@@ -53,6 +55,7 @@
     "@storybook/react": "^6.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.0",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^16.3.3",
