build: update tslib version for compat

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "pretty": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es5"
+    "target": "es5",
+    "importHelpers": true
   },
-  "exclude": ["node_modules",],
+  "exclude": ["node_modules"],
   "include": ["./src"]
 }
