--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@react-hook/mouse-position": "^4.1.0",
     "classnames": "^2.2.6",
+    "tslib": "^2.3.0",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
